# safetensors_distributed

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  example.py  flake.nix  test.safetensors
core/: Cargo.toml
core/examples/: README.md  create_distributed.rs  hub_distributed.rs  redistribute.rs  redistribute_model.rs  strategy_comparison.rs
core/src/: lib.rs  loader.rs  plan.rs  redistributor.rs  tensor.rs  topology.rs  topology_loader.rs
core/src/redistributor/: core.rs  loader.rs  location.rs  mod.rs  task.rs
crates/safetensors-distributed-core/: Cargo.toml
crates/safetensors-distributed-core/src/: lib.rs
python/: Cargo.toml  pyproject.toml  test.py
python/src/: lib.rs  loader.rs  main.rs  plan.rs
python/tests/: test_plan.py
src/: lib.rs  loader.rs  plan.rs
tests/: test_plan.py
