[workspace]
members = [
    "core",
    "python"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3", "abi3-py38"] }
safetensors = { path = "../safetensors/safetensors" }
serde_json = "1.0.140"
thiserror = "2.0.12"
tempfile = "3.10.1"
indicatif = "0.17.7"
serde = { version = "1.0", features = ["serde_derive"] }
log = { version = "0.4" }
anyhow = { version = "1.0" }
env_logger = { version = "0.10" }
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
