[package]
name = "safetensors_distributed"
version.workspace = true
edition.workspace = true

[dependencies]
safetensors = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
memmap2 = { workspace = true }
num_cpus = "1.16"

[dev-dependencies]
clap = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
sha2 = "0.10"
