[package]
name = "safetensors_distributed_pyo3"
version.workspace = true
edition.workspace = true

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3", "abi3-py38"] }
safetensors_distributed = { path = "../core" }
tokio = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
