[package]
name = "safetensors-distributed-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3", "abi3-py38"] }
safetensors_distributed = { path = "../core" }
tokio = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
