[build-system]
requires = ["maturin>=0.14.0"]
build-backend = "maturin"

[project]
name = "safetensors_distributed"
version = "0.1.0"
description = "A Python API for loading SafeTensors files from URLs"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.maturin]
python-source = "src" 