[package]
name = "safetensors-distributed-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for distributed safetensors loading"
license = "MIT"

[dependencies]
safetensors = "0.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
